# aoc2024

./: Cargo.toml  README.adoc
.github/workflows/: codspeed.yml
benches/: day01_benchmark.rs  day02_benchmark.rs  day03_benchmark.rs  day04_benchmark.rs  day05_benchmark.rs
src/: day01.rs  day02.rs  day03.rs  day04.rs  day05.rs  day06.rs  lib.rs
