[package]
name = "aoc2024"
version = "0.1.0"
edition = "2021"

[dependencies]
aoc-runner = "0.3.0"
aoc-runner-derive = "0.3.0"
regex = "1.11.1"
winnow = "0.6.20"

[dev-dependencies]
criterion = "0.5.1"

[[bench]]
name = "day01_benchmark"
harness = false

[[bench]]
name = "day02_benchmark"
harness = false

[[bench]]
name = "day03_benchmark"
harness = false

[[bench]]
name = "day04_benchmark"
harness = false

[profile.bench]
lto = "fat"
